syntax = "proto3";

package ntx.v1;

import "google/protobuf/timestamp.proto";
import "ntx/v1/common.proto";

option go_package = "github.com/voidarchive/ntx/gen/go/ntx/v1;ntxv1";

service MarketService {
  rpc Status(StatusRequest) returns (StatusResponse);
  rpc GetIndices(GetIndicesRequest) returns (GetIndicesResponse);
  rpc GetSectors(GetSectorsRequest) returns (GetSectorsResponse);
}

message MarketStatus {
  bool is_open = 1;
  string state = 2; // "open", "closed", "pre-open"
  google.protobuf.Timestamp as_of = 3;
}

message StatusRequest {}

message StatusResponse {
  MarketStatus status = 1;
}

message GetIndicesRequest {}

message GetIndicesResponse {
  repeated Index indices = 1;
}

message GetSectorsRequest {}

message GetSectorsResponse {
  repeated SectorSummary sectors = 1;
}
